# aws-lambda-tunner

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  MIGRATION_GUIDE.md  Makefile  README.md  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml
aws-lambda-tunner/: .pre-commit-config.yaml  INTEGRATION_REPORT.md  Makefile  setup.py
aws-lambda-tunner/.github/workflows/: ci.yml
aws-lambda-tunner/aws_lambda_tuner/: exceptions.py  models.py  orchestrator_module.py  report_service.py
aws-lambda-tunner/aws_lambda_tuner/analyzers/: analyzer.py  continuous_analyzer.py
aws-lambda-tunner/aws_lambda_tuner/intelligence/: __init__.py  recommendation_engine.py
aws-lambda-tunner/aws_lambda_tuner/monitoring/: continuous_optimizer.py
aws-lambda-tunner/aws_lambda_tuner/providers/: aws.py
aws-lambda-tunner/aws_lambda_tuner/reporting/: export_formats.py
aws-lambda-tunner/aws_lambda_tuner/strategies/: continuous_strategy.py  on_demand_strategy.py  workload_strategy.py
aws-lambda-tunner/aws_lambda_tuner/templates/: comprehensive.json  cost_optimized.json  on_demand_optimized.json
aws-lambda-tunner/examples/: cpu_intensive_example.py  io_bound_example.py  sample_payload.json
aws-lambda-tunner/examples/reports/: README.md  sample_web_api_report.html
aws-lambda-tunner/tests/: conftest.py  test_config.py
aws-lambda-tunner/tests/e2e/: test_complete_optimization_scenarios.py
aws-lambda-tunner/tests/integration/: test_workload_optimization.py
aws-lambda-tunner/tests/intelligence/: __init__.py  test_cost_predictor.py
aws-lambda-tunner/tests/orchestration/: __init__.py  test_aws_provider_enhancements.py  test_enhanced_orchestrator.py
aws-lambda-tunner/tests/reporting/: __init__.py  test_cli_enhancements.py  test_enhanced_reports.py
aws-lambda-tunner/tests/unit/: test_analyzers.py  test_models.py
aws-lambda-tunner/tests/utils/: __init__.py  test_data_generators.py
aws_lambda_tuner/: __init__.py  cli.py  cli_module.py  config.py  config_module.py  exceptions.py  models.py  orchestrator.py  orchestrator_module.py  report_service.py  reports.py  utils.py  visualization.py  visualization_module.py
aws_lambda_tuner/analyzers/: __init__.py  analyzer.py  continuous_analyzer.py  on_demand_analyzer.py  scheduled_analyzer.py
aws_lambda_tuner/intelligence/: __init__.py  cost_predictor.py  pattern_recognizer.py  recommendation_engine.py
aws_lambda_tuner/monitoring/: __init__.py  alert_manager.py  continuous_optimizer.py  performance_monitor.py
aws_lambda_tuner/providers/: aws.py
aws_lambda_tuner/reporting/: __init__.py  export_formats.py  interactive_dashboards.py  service.py  workload_report_templates.py
aws_lambda_tuner/strategies/: __init__.py  continuous_strategy.py  on_demand_strategy.py  scheduled_strategy.py  workload_strategy.py
aws_lambda_tuner/templates/: __init__.py  continuous_optimized.json  development.json  scheduled_optimized.json  speed_optimized.json
examples/: __init__.py  basic_example.py  comprehensive_example.py  memory_intensive_example.py  sample.config.json
examples/reports/: README_PREVIEW.html  sample_cost_projection.html  sample_dashboard.html  sample_web_api_report.json
tests/: README.md  __init__.py  conftest.py  test_utils.py
tests/analyzers/: __init__.py  test_enhanced_analyzer.py  test_workload_analyzers.py
tests/e2e/: test_complete_optimization_scenarios.py
tests/integration/: test_cli_workflows.py  test_workload_optimization.py
tests/intelligence/: test_cost_predictor.py  test_recommendation_engine.py
tests/monitoring/: test_alert_manager.py  test_performance_monitor.py
tests/orchestration/: __init__.py  test_aws_provider_enhancements.py  test_enhanced_orchestrator.py  test_workload_strategies.py
tests/performance/: test_optimization_algorithms.py
tests/reporting/: __init__.py  test_cli_enhancements.py  test_enhanced_reports.py  test_visualizations.py
tests/unit/: test_analyzers.py  test_config.py  test_core_cli_commands.py  test_models.py
tests/utils/: __init__.py  fixtures.py  mock_aws.py  test_data_generators.py  test_helpers.py
